// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > Snapshots > should match snapshot for card with all props 1`] = `
<div
  class="rounded-lg bg-white overflow-hidden transition-all duration-200 border border-gray-200 p-4"
>
  <div
    class="border-b border-gray-200 pb-3 mb-3"
  >
    Header
  </div>
  <div
    class=""
  >
    Body
  </div>
  <div
    class="border-t border-gray-200 pt-3 mt-3"
  >
    Footer
  </div>
  <div
    class="flex gap-2 justify-end border-t border-gray-200 pt-3 mt-3"
  >
    <button>
      Action
    </button>
  </div>
</div>
`;

exports[`Card > Snapshots > should match snapshot for card with cover 1`] = `
<div
  class="rounded-lg bg-white overflow-hidden transition-all duration-200 border border-gray-200"
>
  <div
    class="overflow-hidden"
  >
    <img
      alt="Card cover image"
      class="w-full h-48 object-cover"
      src="https://example.com/image.jpg"
    />
  </div>
  <div
    class="p-4"
  >
    Card with cover
  </div>
</div>
`;

exports[`Card > Snapshots > should match snapshot for default card 1`] = `
<div
  class="rounded-lg bg-white overflow-hidden transition-all duration-200 border border-gray-200 p-4"
>
  <div
    class=""
  >
    Default Card
  </div>
</div>
`;

exports[`Card > Snapshots > should match snapshot for hoverable card 1`] = `
<div
  class="rounded-lg bg-white overflow-hidden transition-all duration-200 border border-gray-200 shadow-md cursor-pointer hover:shadow-xl hover:scale-[1.02] p-4"
>
  <div
    class=""
  >
    Hoverable Card
  </div>
</div>
`;
